[package]
name = "hyper-hickory"
version = "0.7.0"
edition = "2021"
description = "HTTP connector for hyper that uses hickory's DNS resolver"
license = "MIT"
documentation = "https://docs.rs/hyper-hickory"
homepage = "https://github.com/Gelbpunkt/hyper-hickory"
repository = "https://github.com/Gelbpunkt/hyper-hickory"

[dependencies]
hyper-util  = { version = "0.1", default-features = false, features = ["client", "client-legacy", "tokio"] }
hickory-resolver = { version = "0.24", default-features = false, features = ["tokio-runtime"] }
tower-service = "0.3"

[dev-dependencies]
http = "1"
http-body-util = "0.1"
hyper = "1"
hyper-util  = { version = "0.1", default-features = false, features = ["client", "client-legacy", "http1", "tokio"] }
tokio = { version = "1", default-features = false, features = ["rt", "macros"] }

[features]
default = []

# Configuration features
system-config = ["hickory-resolver/system-config"]

# DNS features
dns-over-openssl = ["hickory-resolver/dns-over-openssl"]
dns-over-native-tls = ["hickory-resolver/dns-over-native-tls"]
dns-over-rustls = ["hickory-resolver/dns-over-rustls"]

dns-over-https-rustls = ["hickory-resolver/dns-over-https-rustls"]

dnssec-openssl = ["hickory-resolver/dnssec-openssl"]
dnssec-ring = ["hickory-resolver/dnssec-ring"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
